2007-02-09  Zack Weinberg  <zackw@panix.com>

	* cmd_merging.cc (merge_into_workspace): Use get_content_paths.

	* work.cc (get_revision_id, get_base_revision, get_base_roster)
	(get_base_and_current_roster_shape): Delete delete delete.
	* work.hh: Likewise.  Improve comments.
	* database.hh (parent_cached_roster): New wrappers for parent_entries.
	* automate.cc (attributes, get_base_revision_id)
	* cmd_diff_log.cc (prepare_diff)
	* cmd_merging.cc (update, merge_into_workspace)
	Use parent_id/parent_roster/parent_cached_roster wrappers instead
	of direct access to pair ->first and ->second.

	* cmd_ws_commit.cc (revert): Remove the remaining use of
	get_revision_id.

	* cmd_files.cc (cat, automate get_file_of): Fail gracefully in a
	two-parent workspace, unless given -r.
	* tests/two_parent_workspace_commands_that_fail: Test them.

2007-02-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* work.cc (maybe_update_inodeprints): Update for multi-parent
	workspace.
	* tests/two_parent_workspace_inodeprints: New test.
	* testsuite.lua: Add it.

2007-02-09  Zack Weinberg  <zackw@panix.com>

	* tests/workspace_migration: Generalize to support different sorts
	of migration-needing workspaces.  Add new "inodeprints" and
	"twoparent" tests.

	* cmd_list.cc (ls_known, ls_changed): Work in a two-parent workspace.
	* tests/two_parent_workspace_list: New test.
	* testsuite.lua: Add it.

	* automate.cc (attributes): Fail gracefully in a two-parent workspace.
	* tests/two_parent_workspace_commands_that_fail: Add test for
	automate attributes.

	* cmd_files.cc (log): Work in a two-parent workspace.
	* tests/merge_into_workspace: Augment with tests for log.

	* cmd_files.cc (annotate): Handle multi-parent workspaces gracefully.
	Add lengthy comment about why multi-parent annotate doesn't work.
	* tests/two_parent_workspace_annotate: New xfailed test.
	* testsuite.lua: Update.

2007-02-07  Zack Weinberg  <zackw@panix.com>

	* work.cc (perform_rename): Work in a two-parent workspace.