@@ -717,5 +717,6 @@ table.insert(tests, "two_parent_workspace_add_drop_rename")
 table.insert(tests, "two_parent_workspace_attrs")
 table.insert(tests, "two_parent_workspace_pivot_root")
 table.insert(tests, "two_parent_workspace_inodeprints")
+table.insert(tests, "two_parent_workspace_inodeprint_from_birth")
 table.insert(tests, "two_parent_workspace_annotate")
 table.insert(tests, "two_parent_workspace_list")
